--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-virtualized": "^9.22.3",
+    "react-vis": "^1.11.7",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.1.2"
   },
