--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "aegies-tech-assessment",
+  "name": "covid19-dashboard",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
